Fix some spacing and down and up functionality

--- a/src/components/Nav/footer.scss
+++ b/src/components/Nav/footer.scss
@@ -60,7 +60,7 @@
 
   li {
     display: inline-block;
-    padding: 0.5em;
+    padding: 1em;
     margin: 0 10px;
 
     a {
@@ -68,16 +68,11 @@
       color: $dark-text;
       text-align: center;
       cursor: pointer;
-      font-size: 2em;
+      font-size: 1.85em;
     
       svg {
         transition: all 0.25s;
         color: $dark-text;
-      }
-
-      svg.linkedin {
-        height: 0.85em;
-        width: 0.85em;
       }
     
       &:hover svg {
