--- a/src/components/WaveSkills/waveSkills.scss
+++ b/src/components/WaveSkills/waveSkills.scss
@@ -40,8 +40,8 @@
 }
 
 #skills {
-  padding-bottom: 3rem;
-  padding-top: 3rem;
+  padding-bottom: 4rem;
+  padding-top: 5rem;
 
   h4 {
     padding-top: 2.5%;
